feat: allow to subscribe to persisted blocks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", f
 reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 
 # alloy
-alloy-provider = { version = "1.1", features = ["ws"] }
+alloy-eips = "1.1"
+alloy-primitives = "1.1"
+alloy-provider = { version = "1.1", features = ["ws", "pubsub"] }
 alloy-rpc-types-eth = "1.1"
 
 # async
